samples/_failures_safe/1761704766_a3720d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f7e5b5b.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_2f7e5b5b.c:173:9: error: ‘parser_’ undeclared (first use in this function); did you mean ‘parser’?
  173 |         parser_
      |         ^~~~~~~
      |         parser
./samples/SAFE/__tmp_2f7e5b5b.c:173:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2f7e5b5b.c:173:16: error: expected ‘;’ at end of input
  173 |         parser_
      |                ^
      |                ;
./samples/SAFE/__tmp_2f7e5b5b.c:173:9: error: expected declaration or statement at end of input
  173 |         parser_
      |         ^~~~~~~
./samples/SAFE/__tmp_2f7e5b5b.c:173:9: error: expected declaration or statement at end of input
